--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,10 +1,21 @@
-<h1>category</h1>
+<h1 class="text-3xl font-bold text-gray-700 mb-6">category</h1>
 
-<ul>
 <% @categories.each do |category| %>
-  <li>
-    <strong><%= category.name %></strong> (<%= category.description %>):
-    <%= category.description %>
-  </li>
+  <section class="category bg-white shadow-md rounded px-8 pt-6 pb-8 mb-6">
+    <div class="summary">
+      <h2 class="text-2xl text-gray-700">
+        <%= link_to category.name, category, class: "font-bold text-blue-500 hover:text-blue-700" %>
+      </h2>
+      <h3 class="text-xl text-gray-500 mt-2">
+        <%= category.description %>
+      </h3>
+      <p class="text-gray-600 mt-4">
+        <%= truncate(category.description, length: 150, separator: ' ') %>
+      </p>
+    </div>
+  </section>
 <% end %>
-</ul>
+
+<section class="admin py-4">
+  <%= link_to "Add New category", new_category_path, class: "inline-block bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
+</section>
