--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render "shared/errors", object: category %>
+
 <%= form_with(model: @category, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
   <div class="mb-4">
     <%= f.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
