--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,13 +8,27 @@
       <%= @category.description %>
     </p>
     <table class="table-auto">
-      <tr class="border-t border-gray-200">
-        <th class="px-4 py-2 text-left text-gray-500">Total Gross:</th>
-        <td class="px-4 py-2 text-left text-gray-700"><%= @category.description %></td>
-      </tr>
-    </table>
+  <tr class="border-t border-gray-200">
+    <% @category.tasks.each do |task| %>
+      <td>
+        <p class="text-gray-600 mt-4">
+          <%= task.name %>
+        </p>
+      </td>
+    <% end %>
+  </tr>
+</table>
+  </div>
+
+  <div class="tasks p-4 bg-blue-100 rounded-md shadow-lg text-center">
+    <%= link_to "New Task!", new_category_task_path(@category), class: "text-green-700 font-semibold text-lg border-lg"%>
+    <p>
+      <%= link_to "List of Tasks", category_tasks_path(@category), class: "text-blue-700 font-semibold text-lg" %>
+    </p>
+    
   </div>
 </section>
+
 <section class="admin py-4">
   <%= link_to "Edit", edit_category_path(@category), class: "inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
   <%= link_to "Delete", category_path(@category), class: "inline-block ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline",
