sessions controller and user signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
 
-    <%= render 'shared/header' %>
+    <%= render 'layouts/header' %>
 
    <div class="content">
   <%= render "layouts/flash" %>
@@ -21,7 +21,7 @@
   <%= yield %>
 </div>
 
-    <%= render 'shared/footer' %>
+    <%= render 'layouts/footer' %>
 
     
   </body>
