--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,9 @@
       Flowbite
     <% end %>
     <ul class='flex space-x-4'>
+    <li>
+        <%= link_to "Sign In", signin_path, class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"%>
+      </li>
       <li>
         <%= link_to "Sign Up", signup_path, class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"%>
       </li>
