--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,14 @@
       <li>
         <%= link_to current_user.name, current_user %>
       </li>
+      <li>
+      <%= link_to "Account Settings", edit_user_path(current_user) %>
+    </li>
+      <li>
+      <%= link_to "Sign Out", session_path,
+      data: {turbo_method: :delete },
+      class:"py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600 transition-colors"  %>
+    </li>
 
       <% else %>
 
