--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
     <h2 class="text-lg text-center text-blue-600 mb-4"><%= mail_to @user.email, @user.email, class: "underline" %></h2>
     <div class="actions flex space-x-4">
         <%= link_to "Edit Account", edit_user_path(@user), class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors" %>
-        <%= link_to "Delete Account", @user, method: :delete, data: { confirm: "Are you sure?" }, class: "py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600 transition-colors" %>
+        <%= link_to "Delete Account", @user, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
+         class: "py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600 transition-colors" %>
     </div>
 </section>
