--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,41 +1,33 @@
-<header class="bg-gray-400">
-  <nav class="container mx-auto flex justify-between items-center p-6">
-    <ul class='flex space-x-4'>
-      <li>
-        <%= link_to "All Categories", categories_path, class: "text-gray-700 hover:text-gray-900 transition-colors" %>
-      </li>
-    </ul>
-    <%= link_to root_path, class: "flex items-left text-xl font-bold text-gray-700" do %>
-      <%= image_tag "https://flowbite.com/docs/images/logo.svg", alt: "Flowbite Logo", class: "h-8 w-auto mr-2" %>
-      Flowbite
-    <% end %>
-    <ul class='flex space-x-4'>
-
-
-      <% if current_user %>
-      <li>
-        <%= link_to current_user.name, current_user %>
-      </li>
-      <li>
-      <%= link_to "Account Settings", edit_user_path(current_user) %>
-    </li>
-      <li>
-      <%= link_to "Sign Out", session_path,
-      data: {turbo_method: :delete },
-      class:"py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600 transition-colors"  %>
-    </li>
-
-      <% else %>
-
-      <li>
-        <%= link_to "Sign In", signin_path, class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"%>
-      </li>
-
-      <li>
-        <%= link_to "Sign Up", signup_path, class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors"%>
-      </li>
-
+<header class="bg-blue-800 py-4">
+  <nav class="container mx-auto flex justify-between items-center px-6">
+    <div class="flex items-center space-x-4">
+      <%= link_to root_path, class: "flex items-center space-x-2" do %>
+        <%= image_tag "logo", alt: "Logo", class: "h-8 w-auto" %>
+        <span class="text-2xl font-bold text-white">Journal - Planner</span>
       <% end %>
-    </ul>
+    </div>
+
+    <div class="flex items-center space-x-4">
+      <% if current_user %>
+        <div class="flex space-x-4">
+          <%= link_to "All Categories", categories_path, class: "text-white 
+          hover:text-blue-200 transition-colors flex items-start" %>
+          <%= link_to current_user.name, user_path(current_user), class: "text-white 
+          hover:text-blue-200 transition-colors" %>
+          <%= link_to "Account Settings", edit_user_path(current_user), class: "text-white 
+          hover:text-blue-200 transition-colors" %>
+        </div>
+        <%= link_to "Sign Out", session_path, data: {turbo_method: :delete }, class:"py-2 px-4 
+        bg-red-600 text-white rounded hover:bg-red-700 transition-colors"  %>
+      <% else %>
+        <div class="flex space-x-4">
+          <%= link_to "Home", root_path, class: "text-white hover:text-blue-200 transition-colors" %>
+          <%= link_to "Sign In", signin_path, class: "py-2 px-4 bg-blue-600 text-white 
+          rounded hover:bg-blue-700 transition-colors"%>
+          <%= link_to "Sign Up", signup_path, class: "py-2 px-4 bg-blue-600 text-white 
+          rounded hover:bg-blue-700 transition-colors"%>
+        </div>
+      <% end %>
+    </div>
   </nav>
 </header>
