--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,36 +1,32 @@
-<section class="movie-details bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-  <div class="details">
-    <h1 class="text-3xl font-bold text-gray-700"><%= @category.name %></h1>
-    <h2 class="text-xl text-gray-500">
-      <%= @category.description %> &bull; <%= @category.description %>
-    </h2>
-    <p class="text-gray-600">
-      <%= @category.description %>
-    </p>
-    <table class="table-auto">
-  <tr class="border-t border-gray-200">
-    <% @category.tasks.each do |task| %>
-      <td>
-        <p class="text-gray-600 mt-4">
-          <%= task.name %>
-        </p>
-      </td>
-    <% end %>
-  </tr>
-</table>
-  </div>
 
-  <div class="tasks p-4 bg-blue-100 rounded-md shadow-lg text-center">
-    <%= link_to "New Task!", new_category_task_path(@category), class: "text-green-700 font-semibold text-lg border-lg"%>
-    <p>
-      <%= link_to "List of Tasks", category_tasks_path(@category), class: "text-blue-700 font-semibold text-lg" %>
-    </p>
-    
-  </div>
-</section>
+<div class="container mx-auto py-6">
+  <div class="flex flex-wrap -mx-4">
+    <div class="mx-auto w-full lg:w-1/2 px-4">
 
-<section class="admin py-4">
-  <%= link_to "Edit", edit_category_path(@category), class: "inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
-  <%= link_to "Delete", category_path(@category), class: "inline-block ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline",
-  data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
-</section>
+      <div class="flex flex-col mb-8 bg-white rounded shadow p-6">
+        <div class="flex justify-between items-start">
+          <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @category.name %></h1>
+          <% if current_user %>
+            <div class="flex items-center space-x-2">
+              <%= link_to "Edit", edit_category_path(@category), class: "px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700 transition duration-150 ease-in-out" %>
+              <%= link_to "Delete", category_path(@category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "px-4 py-2 bg-red-500 text-white rounded hover:bg-red-700 transition duration-150 ease-in-out" %>
+            </div>
+          <% end %>
+        </div>
+        <p class="text-xl text-gray-600"><%= @category.description %></p>
+        <div class="bg-white rounded">
+          <div class="flex space-x-2 justify-between items-start pt-10">
+            <h2><%= link_to "List of Tasks", category_tasks_path(@category), class: "text-2xl font-bold text-blue-700 mb-4 " %></h2>
+            <% if current_user %>
+              <div class="flex items-center justify-between mb-6">
+                <%= link_to "New Task!", new_category_task_path(@category), class: "px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700 transition duration-150 ease-in-out" %>
+              </div>
+            <% end %>
+          </div>
+          <%= turbo_frame_tag 'tasks_frame' do %>
+        <%= render 'tasks/tasks', tasks: @tasks, category: @category %>
+        <% end %>
+
+    </div>
+  </div>
+</div>
