--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,11 +1,15 @@
-<% if flash[:notice] %>
-  <div class="flash notice bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
-    <%= flash[:notice] %>
-  </div>
-<% end %>
+<div id="flash">
+  <% if flash[:notice] %>
+    <div class="flash notice bg-green-100 border border-green-400 text-green-700 px-4 py-3 
+    rounded relative" role="alert">
+      <%= flash[:notice] %>
+    </div>
+  <% end %>
 
- <% if flash[:alert] %>
-  <div class="flash alert bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-    <%= flash[:alert] %>
-  </div>
-<% end %>
+  <% if flash[:alert] %>
+    <div class="flash alert bg-red-100 border border-red-400 text-red-700 px-4 py-3 
+    rounded relative" role="alert">
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
+</div>
