--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,12 +3,12 @@
 <%= form_with(model: @category, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
   <div class="mb-4">
     <%= f.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
-    <%= f.text_field :name, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+    <%= f.text_field :name, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline border-blue-300" %>
   </div>
 
   <div class="mb-6">
     <%= f.label :description, class: "block text-gray-700 text-sm font-bold mb-2" %>
-    <%= f.text_area :description, rows: 7, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+    <%= f.text_area :description, rows: 7, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline border-blue-300" %>
   </div>
 
   <div class="flex items-center justify-between">
