--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,4 @@
-
-
-<%= form_with(model: [@category, @task], class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
+<%= form_with(model: [@category, @task], local: true, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
   <div class="mb-4">
     <%= f.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
     <%= f.text_field :name, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
@@ -11,8 +9,17 @@
     <%= f.text_area :description, rows: 7, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
   </div>
 
+  <div class="mb-6">
+    <%= f.label :deadline, class: "block text-gray-700 text-sm font-bold mb-2" %>
+    <%= f.datetime_field :deadline, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+  </div>
+
+  <div class="mb-6">
+    <%= f.label :completed, class: "block text-gray-700 text-sm font-bold mb-2" %>
+    <%= f.check_box :completed, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
+  </div>
 
   <div class="flex items-center justify-between">
-    <%= f.submit "Save", class: "cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
+    <%= f.submit @task.new_record? ? 'Create' : 'Update', class: "cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
   </div>
 <% end %>
