--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_frame_tag 'tasks_frame' do %>
 <h1 class="text-3xl font-bold mb-2">Tasks for <%= link_to @category.name, @category, class: "text-blue-500 hover:underline" %> </h1>
 
 
@@ -17,3 +18,4 @@
     </li>
   <% end %>
 </ul>
+  <% end %>
