--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,22 @@
-<section class="user bg-blue-100 p-4 rounded-md shadow-lg flex flex-col items-center">
-    <%= profile_image(@user, class: "w-24 h-24 rounded-full") %>
-    <div class="text-lg font-semibold mt-2"><%= @user.username %></div>
-    <h1 class="text-4xl font-bold text-center mt-4 mb-2"><%= @user.name %></h1>
-    <h3 class="text-xl text-center text-blue-600 mb-4">Member Since: <%= @user.created_at.strftime("%B %Y") %></h3>
-    <h2 class="text-lg text-center text-blue-600 mb-4"><%= mail_to @user.email, @user.email, class: "underline" %></h2>
-    <div class="actions flex space-x-4">
-        <%= link_to "Edit Account", edit_user_path(@user), class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors" %>
-        <%= link_to "Delete Account", @user, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
-         class: "py-2 px-4 bg-red-500 text-white rounded hover:bg-red-600 transition-colors" %>
-    </div>
+
+
+<section class="user bg-white p-6 rounded-md shadow-lg flex flex-col items-center space-y-4">
+    <%= profile_image(@user, class: "w-24 h-24 rounded-full border-4 border-blue-400 object-cover") %>
+    <h1 class="text-2xl font-bold text-blue-600 mb-2"><%= @user.name %></h1>
+    <div class="text-lg text-gray-600 mt-2"><%= "@" + @user.username.to_s %></div>
+    <h3 class="text-sm text-gray-500">
+        Member Since: <%= @user.created_at.strftime("%B %Y") %></h3>
+    <h2 class="text-sm text-gray-500 mb-4">
+    <%= mail_to @user.email, @user.email, class: "underline text-blue-600" %></h2>
+    <% if current_user?(@user) || current_user.admin? %>
+        <div class="actions flex space-x-4">
+            <%= link_to "Edit Account", edit_user_path(@user), 
+            class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 
+            transition-colors" %>
+            <%= link_to "Delete Account", @user, 
+            data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
+            class: "py-2 px-4 bg-red-500 text-white rounded 
+            hover:bg-red-600 transition-colors" %>
+        </div>
+    <% end %>
 </section>
