rspec and factory bot, model test ans request spec

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Editing <%= @category.name %></h1>
+<h1 class="text-3xl font-bold mb-2 flex justify-center">Editing <%= @category.name %></h1>
 <%= render "shared/form", category: @category %>
