--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Create a New Movie</h1>
+<h1 class="text-3xl font-bold mb-2 flex justify-center">Create a New Category</h1>
 <%= render "shared/form", category: @category %>
