--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@category, @task], local: true, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
+<%= form_with(model: [@category, @task], local: false, data: { turbo: "false" }, class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4") do |f| %>
   <div class="mb-4">
     <%= f.label :name, class: "block text-gray-700 text-sm font-bold mb-2" %>
     <%= f.text_field :name, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
