--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'tasks_frame' do %>
+<%= turbo_frame_tag 'new_task' do %>
 <h1 class="text-3xl font-bold mb-2">Task for <%= link_to @category.name, @category, class: "text-blue-500 hover:underline"%></h1>
 
 <%= render 'shared/errors', object: @task %>
