--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="container mx-auto flex justify-between items-center px-6">
     <div class="flex items-center space-x-4">
       <%= link_to root_path, class: "flex items-center space-x-2" do %>
-        <%= image_tag "logo.png", alt: "Logo", class: "h-8 w-auto" %>
+        <%= image_tag "logo.svg", alt: "Logo", class: "h-8 w-auto" %>
         <span class="text-2xl font-bold text-white">Journal - Planner</span>
       <% end %>
     </div>
