--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-red-500">
 
     <%= render 'layouts/header' %>
 
-   <div class="content">
+   <div class="content ">
   <%= render "layouts/flash" %>
 
   <%= yield %>
