--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -7,8 +7,7 @@
       An easy way to organize your daily journals. Sign in or sign up to begin!
     </p>
     <div class="flex justify-center">
-      <%= link_to "Sign In", signin_path, class: "inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg" %>
-      <%= link_to "Sign Up", signup_path, class: "ml-4 inline-flex text-gray-700 bg-gray-200 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 rounded text-lg" %>
+      <%= link_to "Get Started!", signin_path, class: "inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg" %>
     </div>
   </div>
 </div>
