--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-    <%= form_with(model: @user, class: 'mt-8 space-y-6') do |f| %>
+    <%= form_with(model: @user, local: false, data: { turbo: "false" }, class: 'mt-8 space-y-6') do |f| %>
       <%= render "shared/errors", object: @user %>
 
       <div class="rounded-md shadow-sm -space-y-px">
