--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
+
 <div class="min-h-screen flex items-center justify-center bg-blue-400 py-12 px-4 sm:px-6 lg:px-8">
+  <%= turbo_frame_tag 'edit_user' do %>
   <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow">
     <div>
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
@@ -8,4 +10,6 @@
 
     <%= render 'form', user: @user %>
   </div>
+  <%end%>
+
 </div>
