--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,13 +10,16 @@
     <%= mail_to @user.email, @user.email, class: "underline text-blue-600" %></h2>
     <% if current_user?(@user) || current_user.admin? %>
         <div class="actions flex space-x-4">
+        <%= turbo_frame_tag 'edit_user' do %>
             <%= link_to "Edit Account", edit_user_path(@user), 
             class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 
             transition-colors" %>
+            <% end %>
             <%= link_to "Delete Account", @user, 
             data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
             class: "py-2 px-4 bg-red-500 text-white rounded 
-            hover:bg-red-600 transition-colors" %>
+            hover:bg-red-600 transition-colors " %>
         </div>
+        
     <% end %>
 </section>
