create category ui fix

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,7 +16,7 @@
 
   <% if current_user %>
     <div class="flex justify-end mb-4">
-      <%= link_to "Add New Category", new_category_path, class: "px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700 transition duration-150 ease-in-out" %>
+      <%= link_to "<i class='fas fa-edit'></i>".html_safe, new_category_path, class: "px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700 transition duration-150 ease-in-out" %>
     </div>
   <% end %>
 
