--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,8 @@
-<h1 class="text-3xl font-bold mb-2 flex justify-center">Create a New Category</h1>
-<%= render "shared/form", category: @category %>
+<div class="min-h-screen flex items-center justify-center bg-blue-400 py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-lg">
+    <div>
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+        Create a New Category
+      </h2>
+    </div>
+<%= render "form", category: @category %>
