--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 
-<div class="container mx-auto py-6">
-  <div class="flex flex-wrap -mx-4">
-    <div class="mx-auto w-full lg:w-1/2 px-4">
+<div class="container mx-auto  py-6 bg-blue-400 min-h-screen max-w-full ">
+  <div class="flex flex-wrap -mx-4 ">
+    <div class="mx-auto w-full lg:w-1/2 px-4 ">
 
       <div class="flex flex-col mb-8 bg-white rounded shadow p-6">
         <div class="flex justify-between items-start">
