--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,13 @@
-
-
-<section class="user bg-white p-6 rounded-md shadow-lg flex flex-col items-center space-y-4">
+<section class="flex items-center justify-center min-h-screen pb-32 px-4 sm:px-6 lg:px-8 bg-blue-400 ">
+  <div class="bg-white p-12 px-32 rounded-md shadow-lg flex flex-col items-center space-y-4">
     <%= profile_image(@user, class: "w-24 h-24 rounded-full border-4 border-blue-400 object-cover") %>
-    <h1 class="text-2xl font-bold text-blue-600 mb-2"><%= @user.name %></h1>
-    <div class="text-lg text-gray-600 mt-2"><%= "@" + @user.username.to_s %></div>
-    <h3 class="text-sm text-gray-500">
-        Member Since: <%= @user.created_at.strftime("%B %Y") %></h3>
-    <h2 class="text-sm text-gray-500 mb-4">
+    <h1 class="text-2xl font-bold text-blue-600 mb-2 text-center"><%= @user.name %></h1>
+    <div class="text-lg text-gray-600 mt-2 text-center"><%= "@" + @user.username.to_s %></div>
+    <h3 class="text-sm text-gray-500 text-center">Member Since: <%= @user.created_at.strftime("%B %Y") %></h3>
+    <h2 class="text-sm text-gray-500 mb-4 text-center">
     <%= mail_to @user.email, @user.email, class: "underline text-blue-600" %></h2>
     <% if current_user?(@user) || current_user.admin? %>
-        <div class="actions flex space-x-4">
+        <div class="actions flex space-x-4 justify-center">
         <%= turbo_frame_tag 'edit_user' do %>
             <%= link_to "<i class='fas fa-user-edit'></i>".html_safe, edit_user_path(@user), 
             class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 
@@ -22,6 +20,6 @@
             hover:bg-red-600 transition-colors " %>
             </div>
         </div>
-        
     <% end %>
+  </div>
 </section>
