--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,13 +2,12 @@
   <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Journal</h2>
 
   <% urgent_categories = @categories.select { |category| category.tasks.where("date(deadline) = ? AND completed = ?", Date.today, false).any? } %>
-
   <% if urgent_categories.any? %>
     <div class="bg-red-500 text-white p-4 mb-6 rounded">
       <p>You have urgent tasks today in these categories:</p>
       <ul>
         <% urgent_categories.each do |category| %>
-          <li><%= link_to category.name, category_path(category) %></li>
+          <li><%= link_to category.name, category_path(category), class: 'text-gray-100 font-bold hover:text-gray-300' %></li>
         <% end %>
       </ul>
     </div>
@@ -16,7 +15,7 @@
 
   <% if current_user %>
     <div class="flex justify-end mb-4">
-      <%= link_to "<i class='fas fa-edit'></i>".html_safe, new_category_path, class: "px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700 transition duration-150 ease-in-out" %>
+      <%= link_to "<i class='fas fa-edit'></i>".html_safe, new_category_path, class: "text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-sm px-4 py-2.5 text-center mr-2 mb-2" %>
     </div>
   <% end %>
 
