--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,8 +8,8 @@
           <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @category.name %></h1>
           <% if current_user %>
             <div class="flex items-center space-x-2">
-              <%= link_to "Edit", edit_category_path(@category), class: "px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700 transition duration-150 ease-in-out" %>
-              <%= link_to "Delete", category_path(@category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "px-4 py-2 bg-red-500 text-white rounded hover:bg-red-700 transition duration-150 ease-in-out" %>
+              <%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_category_path(@category), class: "text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+              <%= link_to "<i class='fas fa-trash'></i>".html_safe, category_path(@category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
             </div>
           <% end %>
         </div>
@@ -21,7 +21,7 @@
             <% if current_user %>
             <%= turbo_frame_tag 'new_task' do %>
               <div class="flex items-center justify-between mb-6">
-                <%= link_to "New Task!", new_category_task_path(@category), class: "px-4 py-2 bg-green-500 text-white rounded hover:bg-green-700 transition duration-150 ease-in-out" %>
+                <%= link_to "New Task!", new_category_task_path(@category), class: "text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
               </div>
               <% end %>
             <% end %>
