--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,14 +17,11 @@
           <%= link_to "Account Settings", edit_user_path(current_user), class: "text-white 
           hover:text-blue-200 transition-colors" %>
         </div>
-        <%= link_to "Sign Out", session_path, data: {turbo_method: :delete }, class:"py-2 px-4 
-        bg-red-600 text-white rounded hover:bg-red-700 transition-colors"  %>
+        <%= link_to "Sign Out", session_path, data: {turbo_method: :delete }, class:"text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center "  %>
       <% else %>
         <div class="flex space-x-4">
-          <%= link_to "Sign In", signin_path, class: "py-2 px-4 bg-blue-600 text-white 
-          rounded hover:bg-blue-700 transition-colors"%>
-          <%= link_to "Sign Up", signup_path, class: "py-2 px-4 bg-blue-600 text-white 
-          rounded hover:bg-blue-700 transition-colors"%>
+          <%= link_to "Sign In", signin_path, class: "text-white bg-gradient-to-r from-blue-400 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center"%>
+          <%= link_to "Sign Up", signup_path, class: "text-white bg-gradient-to-r from-blue-400 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center"%>
         </div>
       <% end %>
     </div>
