--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <%= turbo_frame_tag 'edit_user' do %>
   <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow">
     <div>
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+      <h2 class=" text-center text-3xl font-extrabold text-gray-900">
         Edit Your Account
       </h2>
     </div>
