--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,14 +10,12 @@
         <div class="actions flex space-x-4 justify-center">
         <%= turbo_frame_tag 'edit_user' do %>
             <%= link_to "<i class='fas fa-user-edit'></i>".html_safe, edit_user_path(@user), 
-            class: "py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600 
-            transition-colors" %>
+            class: "text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center " %>
             <% end %>
             <div>
             <%= link_to "<i class='fas fa-trash'></i>".html_safe, @user, 
             data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },
-            class: "py-2 px-4 bg-red-500 text-white rounded 
-            hover:bg-red-600 transition-colors " %>
+            class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center " %>
             </div>
         </div>
     <% end %>
