--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,9 @@
 
-<div class="container mx-auto  py-6 bg-blue-400 min-h-screen max-w-full ">
-  <div class="flex flex-wrap -mx-4 ">
+<div class="container mx-auto bg-blue-400 min-h-screen max-w-full ">
+  <div class="flex flex-wrap  ">
     <div class="mx-auto w-full lg:w-1/2 px-4 ">
 
-      <div class="flex flex-col mb-8 bg-white rounded shadow p-6">
+      <div class="flex flex-col mb-8 bg-white rounded shadow p-6 mt-24 mb-24">
         <div class="flex justify-between items-start">
           <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @category.name %></h1>
           <% if current_user %>
@@ -16,7 +16,8 @@
         <p class="text-xl text-gray-600"><%= @category.description %></p>
         <div class="bg-white rounded">
           <div class="flex space-x-2 justify-between items-start pt-10">
-           <h2><%= link_to "List of Tasks", category_tasks_path(@category), class: "text-2xl font-bold text-blue-700 mb-4 " %></h2>
+           <h2><%= link_to "List of Tasks", category_tasks_path(@category), class: "text-2xl font-bold text-blue-700 mb-4" %></h2>
+           <br>
              <%= turbo_frame_tag 'new_task' do %>
             <% if current_user %>
             <%= turbo_frame_tag 'new_task' do %>
@@ -30,6 +31,7 @@
           <%= turbo_frame_tag 'tasks_frame' do %>
         <%= render 'tasks/tasks', tasks: @tasks, category: @category %>
         <% end %>
+        
 
     </div>
   </div>
