--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'tasks_frame' do %>
+<%= turbo_frame_tag 'tasks_edit' do %>
 <h1 class = "text-3xl font-bold mb-2">Edit Task</h1>
 
 <%= render 'tasks/form'%>
