--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,8 +1,13 @@
-<div class="min-h-screen flex items-center justify-center bg-blue-400 py-12 px-4 sm:px-6 lg:px-8">
-  <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-lg">
+<div class="flex flex-col min-h-screen flex items-center  bg-blue-400  px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8 bg-white p-10 rounded-xl shadow-lg  mt-24">
     <div>
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
         Create a New Category
       </h2>
     </div>
 <%= render "form", category: @category %>
+</div>
+</div>
+
+
+
