--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
-<header class="bg-blue-800 py-4">
+<header class="bg-sky-800 py-4 fixed top-0 left-0 right-0">
   <nav class="container mx-auto flex justify-between items-center px-6">
     <div class="flex items-center space-x-4">
       <%= link_to root_path, class: "flex items-center space-x-2" do %>
         <%= image_tag "logo.svg", alt: "Logo", class: "h-8 w-auto" %>
-        <span class="text-2xl font-bold text-white">Journal - Planner</span>
+        <span class="text-2xl font-bold text-white hover:text-blue-300 transition-colors">Journal - Planner</span>
       <% end %>
     </div>
 
@@ -11,11 +11,11 @@
       <% if current_user %>
         <div class="flex space-x-4">
           <%= link_to "All Categories", categories_path, class: "text-white 
-          hover:text-blue-200 transition-colors flex items-start" %>
+          hover:text-blue-300 transition-colors flex items-start" %>
           <%= link_to current_user.name, user_path(current_user), class: "text-white 
-          hover:text-blue-200 transition-colors" %>
+          hover:text-blue-300 transition-colors" %>
           <%= link_to "Account Settings", edit_user_path(current_user), class: "text-white 
-          hover:text-blue-200 transition-colors" %>
+          hover:text-blue-300 transition-colors" %>
         </div>
         <%= link_to "Sign Out", session_path, data: {turbo_method: :delete }, class:"text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center "  %>
       <% else %>
