--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -18,8 +18,12 @@
     </div>
 
     <div class="flex space-x-4">
+    <%= turbo_frame_tag 'tasks_edit' do %>
         <%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_category_task_path(@category, @task), class: "text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+        <% end %>
+        <div>
         <%= link_to "<i class='fas fa-trash'></i>".html_safe, category_task_path(@category, @task), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+        </div>
     </div>
   </section>
 <% end %>
