--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
       </div>
 
       <div>
-        <%= f.submit (@user.persisted? ? "Update Account" : "Create Account"), class: "group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
+        <%= f.submit (@user.persisted? ? "Update Account" : "Create Account"), class: " cursor-pointer group relative w-full flex justify-center text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
       </div>
     <% end %>
 
