--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-6 py-8 ">
+<div class="container mx-auto px-6 py-8 mb-60">
   <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Journal</h2>
 
   <% urgent_categories = @categories.select { |category| category.tasks.where("date(deadline) = ? AND completed = ?", Date.today, false).any? } %>
