--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container mx-auto bg-blue-400 min-h-screen max-w-full ">
+<div class="container mx-auto bg-blue-400 min-h-screen max-w-full mb-36">
   <div class="flex flex-wrap  ">
     <div class="mx-auto w-full lg:w-1/2 px-4 ">
 
