--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-sky-800 py-4 fixed top-0 left-0 right-0">
+<header class="bg-sky-800 py-4 ">
   <nav class="container mx-auto flex justify-between items-center px-6">
     <div class="flex items-center space-x-4">
       <%= link_to root_path, class: "flex items-center space-x-2" do %>
