added comments on specs and controllers, fixed frames on views

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -11,7 +11,7 @@
 
     <div>
       <%= f.label :description, class: "sr-only" %>
-      <%= f.text_area :description, required: true, placeholder: "Category Description", class: "appearance-none rounded-none relative block w-full px-3 py-6 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm" %>
+      <%= f.text_area :description, required: true, placeholder: "Category Description", class: "appearance-none rounded-none relative block w-full px-3 py-6 border border-gray-300 placeholder-gray-500 text-gray-900  focus:outline-none focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm" %>
     </div>
   </div>
 
