--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,7 +15,9 @@
 
   <% if current_user %>
     <div class="flex justify-end mb-4">
+    <%= turbo_frame_tag 'new_category' do %>
       <%= link_to "<i class='fas fa-edit'></i>".html_safe, new_category_path, class: "text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-sm px-4 py-2.5 text-center mr-2 mb-2" %>
+    <% end %>
     </div>
   <% end %>
 
