--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,19 @@
 
-<div class="container mx-auto bg-blue-400 min-h-screen max-w-full mb-36">
+<div class="container mx-auto bg-blue-400 min-h-screen max-w-full ">
   <div class="flex flex-wrap  ">
     <div class="mx-auto w-full lg:w-1/2 px-4 ">
 
-      <div class="flex flex-col mb-8 bg-white rounded shadow p-6 mt-24 mb-24">
+      <div class="flex flex-col mb-8 bg-white rounded shadow p-6 mt-24 ">
         <div class="flex justify-between items-start">
           <h1 class="text-3xl font-bold text-gray-800 mb-4"><%= @category.name %></h1>
           <% if current_user %>
             <div class="flex items-center space-x-2">
+             <%= turbo_frame_tag 'edit_category' do %>
               <%= link_to "<i class='fas fa-edit'></i>".html_safe, edit_category_path(@category), class: "text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 shadow-lg shadow-blue-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+              <% end %>
+              <div>
               <%= link_to "<i class='fas fa-trash'></i>".html_safe, category_path(@category), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 shadow-lg shadow-red-500/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" %>
+              </div>
             </div>
           <% end %>
         </div>
