--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,5 +1,5 @@
-<div class="flex flex-col items-center justify-center min-h-screen py-2">
-  <div class="flex flex-col w-1/2">
+<div class="flex flex-col items-center mt-72 min-h-screen ">
+  <div class="flex flex-col ">
     <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
       Welcome to our Journal Planner
     </h1>
