--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag :footer, class: "fixed bg-white shadow dark:bg-sky-800 bottom-0 left-0 right-0" do %>
+<%= content_tag :footer, class: "relative bg-white shadow dark:bg-sky-800 bottom-0 left-0 right-0" do %>
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <%= link_to "#", class: "flex items-center mb-4 sm:mb-0" do %>
